SERVER-81390 Use collator to create the record key in hash_agg

SERVER-76060 Deserialize SBE ArraySet with collator

(cherry picked from commit a19074b842b752ee0a61810e0b8f6d79c5aa80c1)

SERVER-81390 Use collator to create the record key in hash_agg

(cherry picked from commit d0811e844e8566dc276fcd73fceabec71c0e2717)