src/mongo/db/exec/sbe/stages/hash_agg.h
@@ -211,8 +211,17 @@ private:
      * values that can't be inlined) obtained by decoding the 'RecordId' keystring to a
      * 'MaterializedRow'. The values in the resulting 'MaterializedRow' may be pointers into
      * 'keyBuffer', so it is important that 'keyBuffer' outlive the row.
+     *
+     * This method is used when there is no collator.
      */
     SpilledRow deserializeSpilledRecord(const Record& record, BufBuilder& keyBuffer);
+
+    /**
+     * Given a 'record' from the record store and a 'collator', decodes it into a pair of
+     * materialized rows (one for the group-by key and another one for the agg value).
+     * Both the group-by key and the agg value are read from the data part of the record.
+     */
+    SpilledRow deserializeSpilledRecord(const Record& record, const CollatorInterface& collator);
 
     PlanState getNextSpilled();
 
